@@ -8,6 +8,11 @@ v2401
  - export text for annotation
  - filtered2: reject all button
 
+v2331
+- no need for outer parenthesis in logical expressions
+- doc: logical expr
+- fix: duplicate DOIs in acc./rej. files
+
 v2330
  - in annotate: delete paper
  - Wikidata as PMID2DOI bkp server
